--- a/package.json
+++ b/package.json
@@ -12,27 +12,30 @@
   "dependencies": {
     "@heroui/react": "^2.8.5",
     "@hookform/resolvers": "^5.2.2",
-    "@tailwindcss/vite": "^4.1.16",
     "axios": "^1.13.0",
     "framer-motion": "^12.23.24",
-    "lucide-react": "^0.556.0",
+    "lucide-react": "^0.562.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.65.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.4",
-    "tailwindcss": "^4.1.16",
     "zod": "^4.1.12"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
+    "@heroui/theme": "^2.4.25",
+    "@tailwindcss/vite": "^4.1.18",
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react": "^5.0.4",
+    "autoprefixer": "^10.4.23",
     "eslint": "^9.36.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.22",
     "globals": "^16.4.0",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.18",
     "vite": "^7.1.7"
   }
 }
