--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "eslint ."
   },
   "dependencies": {
     "@heroui/react": "^2.8.5",
@@ -15,6 +15,7 @@
     "axios": "^1.13.0",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.562.0",
+    "next": "^14.2.24",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.65.0",
@@ -26,11 +27,13 @@
     "@eslint/js": "^9.36.0",
     "@heroui/theme": "^2.4.25",
     "@tailwindcss/vite": "^4.1.18",
+    "@types/node": "^20.17.9",
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react": "^5.0.4",
     "autoprefixer": "^10.4.23",
     "eslint": "^9.36.0",
+    "eslint-config-next": "^14.2.24",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.22",
     "globals": "^16.4.0",
